BJS2-27035 fixes from guys were made